--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,28 +1,8 @@
-apply plugin: 'com.android.application'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
-
-android {
-	compileSdkVersion App.targetSdk
-	buildToolsVersion App.buildTools
-	defaultConfig {
-		applicationId App.domain
-		minSdkVersion App.minimalSdk
-		targetSdkVersion App.targetSdk
-		versionCode 1
-		versionName "1.0"
-	}
-	buildTypes {
-		release {
-			minifyEnabled false
-			proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-		}
-	}
-}
+apply plugin: 'kotlin-kapt'
 
 dependencies {
-	implementation LibrariesCore.kotlinStdLib
-	implementation LibrariesCore.androidxAppcompat
-	implementation LibrariesCore.androidxCoreKtx
-	implementation Modules.viewLayer
+	api 'androidx.appcompat:appcompat:1.1.0'
+	api 'com.google.android.material:material:1.2.0-alpha03'
+	api 'androidx.constraintlayout:constraintlayout:1.1.3'
+	api 'androidx.cardview:cardview:1.0.0'
 }
