--- a/build.gradle
+++ b/build.gradle
@@ -5,8 +5,8 @@ buildscript {
 
 	}
 	dependencies {
-		classpath Classpathes.buildGradle
-		classpath Classpathes.kotlinGradlePlugin
+		classpath 'com.android.tools.build:gradle:3.5.3'
+		classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.61"
 	}
 }
 
@@ -15,5 +15,45 @@ allprojects {
 		google()
 		jcenter()
 		mavenLocal()
+	}
+}
+
+subprojects {
+	if (project.name == 'app') apply plugin: 'com.android.application'
+	else apply plugin: 'com.android.library'
+
+	apply plugin: 'kotlin-android-extensions'
+	apply plugin: 'kotlin-android'
+
+	android {
+		compileSdkVersion 29
+		buildToolsVersion "29.0.2"
+
+		defaultConfig {
+			minSdkVersion 21
+			targetSdkVersion 29
+			versionCode 1
+			versionName "0.0.1"
+
+			testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+			consumerProguardFiles 'consumer-rules.pro'
+		}
+
+		buildTypes {
+			release {
+				minifyEnabled false
+				proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+			}
+		}
+
+	}
+
+	dependencies {
+		implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.61"
+		implementation 'androidx.core:core-ktx:1.1.0'
+
+		//TODO Когда библиотеки перепишуться - попробовать имплементировать только в нужные модули
+		implementation 'ru.endroad.camp:fragment-navigation:1.0.1'
+		implementation 'ru.endroad:arena:2.5.0'
 	}
 }
