--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,4 +5,17 @@ dependencies {
 	api 'com.google.android.material:material:1.2.0-alpha03'
 	api 'androidx.constraintlayout:constraintlayout:1.1.3'
 	api 'androidx.cardview:cardview:1.0.0'
+
+	implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-rc03'
+	implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-rc03'
+
+	implementation 'org.koin:koin-core:2.0.0'
+	implementation 'org.koin:koin-core-ext:2.0.0'
+	implementation 'org.koin:koin-androidx-viewmodel:2.0.0'
+
+	implementation 'com.mikepenz:fastadapter:4.1.1'
+
+	implementation 'androidx.room:room-runtime:2.2.3'
+	implementation 'androidx.room:room-ktx:2.2.3'
+	kapt 'androidx.room:room-compiler:2.2.3'
 }
