--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,7 @@
 apply plugin: 'kotlin-kapt'
 
 dependencies {
-	api 'androidx.appcompat:appcompat:1.1.0'
-	api 'com.google.android.material:material:1.2.0-alpha03'
-	api 'androidx.constraintlayout:constraintlayout:1.1.3'
-	api 'androidx.cardview:cardview:1.0.0'
+	implementation project(":component.design")
 
 	implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-rc03'
 	implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-rc03'
