--- a/feature.estimation/build.gradle
+++ b/feature.estimation/build.gradle
@@ -1,5 +1,8 @@
 dependencies {
+	implementation project(":component.design")
 
 	implementation 'org.koin:koin-core:2.0.0'
 	implementation 'org.koin:koin-core-ext:2.0.0'
+
+	implementation 'com.mikepenz:fastadapter:4.1.1'
 }
