--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
 	implementation 'com.mikepenz:fastadapter:4.1.1'
 
 	kapt 'androidx.room:room-compiler:2.2.3'
+	implementation 'com.facebook.stetho:stetho:1.5.1'
 }
