--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ dependencies {
 
 	implementation project(':feature.wishes')
 	implementation project(":feature.estimation")
+	implementation project(":feature.stub")
 	implementation project(":component.design")
 	implementation project(":component.wish")
 
