--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,7 @@ include ':app',
 	':feature.navigation',
 	':feature.estimation',
 	':feature.wishes',
+	':feature.wishes-completed',
 	':feature.stub',
 	':component.wish',
 	':component.design'
