[revive-trash] Собрал проект
Все старые библиотеки канули в лету. Искать, восстанавливать их не было желание, поэтому просто перехерачил весь проект

--- a/feature.wishes-completed/build.gradle
+++ b/feature.wishes-completed/build.gradle
@@ -1,6 +1,7 @@
 dependencies {
 	implementation project(":component.design")
 	implementation project(":component.wish")
+	implementation project(":component-legacy")
 
 	implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-rc03'
 	implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-rc03'
