--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,3 @@
-apply plugin: 'kotlin-kapt'
 android {
 	flavorDimensions "mock"
 	productFlavors {
@@ -12,8 +11,6 @@ android {
 	}
 }
 dependencies {
-	androidTestImplementation 'ru.endroad:tavern:0.3.0'
-
 	api 'androidx.test.espresso:espresso-core:3.2.0'
 	api 'androidx.test.espresso:espresso-contrib:3.2.0'
 	api 'androidx.test.uiautomator:uiautomator:2.2.0'
@@ -31,6 +28,7 @@ dependencies {
 	implementation project(":feature.stub")
 	implementation project(":component.design")
 	implementation project(":component.wish")
+	implementation project(":component-legacy")
 
 	implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-rc03'
 	implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-rc03'
@@ -41,6 +39,5 @@ dependencies {
 
 	implementation 'com.mikepenz:fastadapter:4.1.1'
 
-	kapt 'androidx.room:room-compiler:2.2.3'
 	implementation 'com.facebook.stetho:stetho:1.5.1'
 }
