--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,9 @@ subprojects {
 	if (project.name == 'app') apply plugin: 'com.android.application'
 	else apply plugin: 'com.android.library'
 
-	apply plugin: 'kotlin-android-extensions'
 	apply plugin: 'kotlin-android'
+	apply plugin: 'kotlin-android-extensions'
+	apply plugin: 'kotlin-kapt'
 
 	android {
 		compileSdkVersion 29
@@ -49,11 +50,20 @@ subprojects {
 	}
 
 	dependencies {
+		implementation 'androidx.appcompat:appcompat:1.2.0'
+		implementation 'androidx.appcompat:appcompat:1.2.0'
 		implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.3.61"
 		implementation 'androidx.core:core-ktx:1.1.0'
 
-		//TODO Когда библиотеки перепишуться - попробовать имплементировать только в нужные модули
-		implementation 'ru.endroad.camp:fragment-navigation:1.0.1'
-		implementation 'ru.endroad:arena:2.5.2'
+		implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
+		implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1"
+
+		implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2"
+		implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.2"
+
+
+		kapt 'androidx.room:room-compiler:2.2.6'
+		api 'androidx.room:room-runtime:2.2.6'
+		api 'androidx.room:room-ktx:2.2.6'
 	}
 }
