--- a/feature.wishes-completed/build.gradle
+++ b/feature.wishes-completed/build.gradle
@@ -3,12 +3,12 @@ dependencies {
 	implementation project(":component.wish")
 	implementation project(":component-legacy")
 
-	implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-rc03'
-	implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-rc03'
+	implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0-alpha01'
+	implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0-alpha01'
 
-	implementation 'org.koin:koin-core:2.0.0'
-	implementation 'org.koin:koin-core-ext:2.0.0'
-	implementation 'org.koin:koin-androidx-viewmodel:2.0.0'
+	implementation 'org.koin:koin-core:2.1.5'
+	implementation 'org.koin:koin-core-ext:2.1.5'
+	implementation 'org.koin:koin-androidx-viewmodel:2.1.5'
 
 	implementation 'com.mikepenz:fastadapter:4.1.1'
 }
