--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,12 @@
 buildscript {
 	repositories {
 		google()
+		jcenter()
 
 	}
 	dependencies {
-		classpath 'com.android.tools.build:gradle:3.5.4'
-		classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.31"
+		classpath 'com.android.tools.build:gradle:7.0.0-alpha14'
+		classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.30"
 	}
 }
 
@@ -13,6 +14,7 @@ allprojects {
 	repositories {
 		google()
 		mavenLocal()
+		jcenter()
 	}
 }
 
