--- a/component.design/build.gradle
+++ b/component.design/build.gradle
@@ -1,5 +1,5 @@
 dependencies {
-	api 'androidx.appcompat:appcompat:1.2.0'
+	api 'androidx.appcompat:appcompat:1.3.0-rc01'
 	api 'com.google.android.material:material:1.4.0-alpha02'
 	api 'androidx.constraintlayout:constraintlayout:2.0.4'
 	api 'androidx.cardview:cardview:1.0.0'
