[compose] Добавил новый модуль для темы Composable

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,9 +1,10 @@
 include ':app',
-	':feature.navigation',
-	':feature.estimation',
-	':feature.wishes',
-	':feature.wishes-completed',
-	':feature.stub',
-	':component.wish',
-	':component.design',
-	':component-legacy'
+		':feature.navigation',
+		':feature.estimation',
+		':feature.wishes',
+		':feature.wishes-completed',
+		':feature.stub',
+		':component-compose-theme',
+		':component.design',
+		':component-legacy',
+		':component.wish'
