[compose] Добавил базовый extension setComposeView для упрощения миграции

--- a/feature.wishes-completed/build.gradle
+++ b/feature.wishes-completed/build.gradle
@@ -2,4 +2,5 @@ dependencies {
 	implementation project(":component.design")
 	implementation project(":component.wish")
 	implementation project(":component-legacy")
+	implementation project(":component-compose-theme")
 }
