--- a/component-legacy/build.gradle
+++ b/component-legacy/build.gradle
@@ -1,4 +1,6 @@
 dependencies {
+	implementation project(":component-compose-theme")
+
 	implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.1'
 	implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.1'
 }
