[refactor] Добавил модуль для фичи с желаниями

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,10 +1,11 @@
 include ':app',
-		':feature.navigation',
-		':feature.estimation',
-		':feature.wishes',
-		':feature.wishes-completed',
-		':feature.stub',
-		':component-compose-theme',
-		':component.design',
-		':component-legacy',
-		':component.wish'
+	':feature.navigation',
+	':feature.estimation',
+	':feature.wishes',
+	':feature.wishes-completed',
+	':feature.stub',
+	':shared-wish-core',
+	':component-compose-theme',
+	':component.design',
+	':component-legacy',
+	':component.wish'
