--- a/settings.gradle
+++ b/settings.gradle
@@ -4,6 +4,7 @@ include ':app',
 	':feature.wishes',
 	':feature.wishes-completed',
 	':feature.stub',
+	':feature-wish-detail',
 	':shared-wish-core',
 	':component-compose-theme',
 	':component.design',
