[compose] Подготовил верстку для создание/редактирования желания

--- a/feature-wish-detail/build.gradle
+++ b/feature-wish-detail/build.gradle
@@ -2,4 +2,5 @@ dependencies {
 	implementation project(":shared-wish-core")
 	implementation project(":component.design")
 	implementation project(":component-legacy")
+	implementation project(":component-compose-theme")
 }
