[compose] Заменил дефолтный xml на composable для экранов-заглушек

--- a/feature.stub/build.gradle
+++ b/feature.stub/build.gradle
@@ -1,3 +1,5 @@
 dependencies {
 	implementation project(":component.design")
+	implementation project(":component-legacy")
+	implementation project(":component-compose-theme")
 }
