--- a/feature.wishes/build.gradle
+++ b/feature.wishes/build.gradle
@@ -2,6 +2,7 @@ dependencies {
 	implementation project(":shared-wish-core")
 	implementation project(":component.design")
 	implementation project(":component-legacy")
+	implementation project(":component-compose-theme")
 
 	implementation project(":feature.estimation")
 
