--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,15 +11,13 @@ android {
 	}
 }
 dependencies {
-	api 'androidx.test.espresso:espresso-core:3.3.0'
-	api 'androidx.test.espresso:espresso-contrib:3.3.0'
-	api 'androidx.test.uiautomator:uiautomator:2.2.0'
-	api 'androidx.test.espresso:espresso-intents:3.3.0'
-
 	androidTestImplementation 'junit:junit:4.13.2'
 	androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-
 	androidTestImplementation 'com.android.support.test:rules:1.0.2'
+	androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+	androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.3.0'
+	androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
+	androidTestImplementation 'androidx.test.espresso:espresso-intents:3.3.0'
 
 	implementation project(':feature.wishes')
 	implementation project(':feature.wishes-completed')
@@ -30,15 +28,6 @@ dependencies {
 	implementation project(":component.design")
 	implementation project(":component.wish")
 	implementation project(":component-legacy")
-
-	implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0-alpha01'
-	implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0-alpha01'
-
-	implementation 'org.koin:koin-core:2.1.5'
-	implementation 'org.koin:koin-core-ext:2.1.5'
-	implementation 'org.koin:koin-androidx-viewmodel:2.1.5'
-
-	implementation 'com.mikepenz:fastadapter:4.1.1'
 
 	implementation 'com.facebook.stetho:stetho:1.5.1'
 }
