[refactor] Переименовал модуль

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,7 +22,7 @@ dependencies {
 	implementation project(':feature.wishes')
 	implementation project(':feature.wishes-completed')
 	implementation project(':feature-wish-detail')
-	implementation project(":component.wish")
+	implementation project(":shared-wish-datasource")
 	implementation project(":component-legacy")
 	implementation project(":component-compose-theme")
 
