--- a/settings.gradle
+++ b/settings.gradle
@@ -5,4 +5,5 @@ include ':app',
 	':shared-wish-core',
 	':shared-wish-datasource',
 	':component-compose-theme',
+	':component-room',
 	':component-legacy'
