--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,5 +26,6 @@ dependencies {
 	implementation project(":component-legacy")
 	implementation project(":component-compose-theme")
 
+	mockImplementation project(":mock-wish")
 	implementation 'com.facebook.stetho:stetho:1.5.1'
 }
