--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,7 @@ dependencies {
 	androidTestImplementation 'androidx.test.espresso:espresso-intents:3.3.0'
 
 	implementation project(':feature-wish-active')
-	implementation project(':feature.wishes-completed')
+	implementation project(':feature-wish-completed')
 	implementation project(':feature-wish-detail')
 	implementation project(":shared-wish-datasource")
 	implementation project(":component-legacy")
