--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ buildscript {
 	}
 	dependencies {
 		classpath "com.android.tools.build:gradle:7.0.0-alpha15"
-		classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+		classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.32"
 	}
 }
 
@@ -61,7 +61,7 @@ subprojects {
 			compose true
 		}
 		composeOptions {
-			kotlinCompilerExtensionVersion compose_version
+			kotlinCompilerExtensionVersion "1.0.0-beta06"
 		}
 
 		buildTypes {
@@ -74,35 +74,35 @@ subprojects {
 	}
 	//Дичь, разрулить gradle после переезда на JetpackCompose
 	dependencies {
-		implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+		implementation "org.jetbrains.kotlin:kotlin-stdlib:1.4.32"
 		implementation 'androidx.core:core-ktx:1.3.2'
 
-		implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
+		implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.3.1"
 
-		implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutine_version"
-		implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutine_version"
+		implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3"
+		implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.3"
 
-		implementation "org.koin:koin-core:$koin_version"
-		implementation "org.koin:koin-core-ext:$koin_version"
-		implementation "org.koin:koin-androidx-viewmodel:$koin_version"
+		implementation "org.koin:koin-core:2.1.5"
+		implementation "org.koin:koin-core-ext:2.1.5"
+		implementation "org.koin:koin-androidx-viewmodel:2.1.5"
 
-		kapt "androidx.room:room-compiler:$room_version"
-		implementation "androidx.room:room-runtime:$room_version"
-		implementation "androidx.room:room-ktx:$room_version"
+		kapt "androidx.room:room-compiler:2.3.0"
+		implementation "androidx.room:room-runtime:2.3.0"
+		implementation "androidx.room:room-ktx:2.3.0"
 
 		implementation 'androidx.activity:activity-compose:1.3.0-alpha07'
 		implementation "androidx.fragment:fragment-ktx:1.3.3"
 
-		implementation "androidx.compose.animation:animation:$compose_version"
-		implementation "androidx.compose.ui:ui:$compose_version"
-		implementation "androidx.compose.ui:ui-tooling:$compose_version"
-		implementation "androidx.compose.runtime:runtime:$compose_version"
+		implementation "androidx.compose.animation:animation:1.0.0-beta06"
+		implementation "androidx.compose.ui:ui:1.0.0-beta06"
+		implementation "androidx.compose.ui:ui-tooling:1.0.0-beta06"
+		implementation "androidx.compose.runtime:runtime:1.0.0-beta06"
 
-		implementation "androidx.compose.foundation:foundation:$compose_version"
-		implementation "androidx.compose.foundation:foundation-layout:$compose_version"
+		implementation "androidx.compose.foundation:foundation:1.0.0-beta06"
+		implementation "androidx.compose.foundation:foundation-layout:1.0.0-beta06"
 
-		implementation "androidx.compose.material:material:$compose_version"
-		implementation "androidx.compose.material:material-icons-core:$compose_version"
-		implementation "androidx.compose.material:material-icons-extended:$compose_version"
+		implementation "androidx.compose.material:material:1.0.0-beta06"
+		implementation "androidx.compose.material:material-icons-core:1.0.0-beta06"
+		implementation "androidx.compose.material:material-icons-extended:1.0.0-beta06"
 	}
 }
